# workspace-pyhton-architecture-lab

./: .gitignore  README.md
acme-common/: .pylintrc  Makefile  README.md  dev-requirements.txt  lab_logging.py  requirements.txt  setup.cfg  setup.py
acme-common/examples/: lab_logging.py
acme-core/: README.md  dev-requirements.txt  requirements.txt  setup.py
acme-media/: Makefile  dev-requirements.txt  requirements.txt  setup.py
acme-selenium/: .pylintrc  Makefile  README.md  dev-requirements.txt  lab.py  requirements.txt  setup.cfg  setup.py
acme-selenium/examples/: lab.py  lab_selenium.py
acme-test/: .pylintrc  Makefile  README.md  dev-requirements.txt  requirements.txt  setup.cfg  setup.py
acme-test/docs/sphinx/: Makefile  conf.py
acme-test/docs/sphinx/_build/doctrees/: environment.pickle  quickstart.doctree
acme-test/docs/sphinx/_build/html/: searchindex.js
acme-test/docs/sphinx/_build/html/_sources/: apidocs.rst.txt  index.rst.txt
acme-test/docu/source/: conf.py  examples.rst  guide.rst  index.rst  modules.rst
architecture-test/: Makefile  setup.py
common/: date_util.py  exceptions.py  file_util.py  filename_util.py  logger.py  number_util.py  string_utils.py
docs-folder/: Makefile-dev-template  Makefile-dev-template-2  Makefile-dev-template-3  README.md  clean.sh
scripts/: reset-all-deps.sh
seleniumutil/: selenium_browser_chrome_util.py  selenium_browser_firefox_util.py  selenium_navigation_util.py  selenium_operation_find_util.py  selenium_operation_webdriverwait_util.py  selenium_test_util.py  selenium_verification_util.py
(+134 files in other folders)
