[bdist_wheel]
universal = 1

[metadata]
description-file = README.md
license_file = LICENSE

[flake8]
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist
max-line-length = 130
max-complexity = 10
ignore = D203, W503

[pylint.master]
disable=
    C0114, # missing-module-docstring
    C0115, # (missing-class-docstring)
    C0116, # (missing-function-docstring)
    R0201, # Method could be a function (no-self-use)
    W0612, # Unused variable 'dir_names' (unused-variable)
    R0903 #Too few public methods (1/2) (too-few-public-methods)
max-line-length=130

[coverage:run]
omit =
    */__init__.py,
    */examples/*,
    */docs/*,
    */tests/*
